--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -14,10 +14,10 @@
   </li>
   <li class="nav-item ms-auto">
     <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+      <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
         Account
-      </button>
-      <ul class="dropdown-menu">
+      </a>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
         <li><%= link_to 'Edit Details', edit_user_registration_path, class: 'dropdown-item' %></li>
         <li><hr class="dropdown-divider"></li>
         <li><%= link_to 'Logout', destroy_user_session_path, class: 'dropdown-item', method: :delete %></li>
