--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -4,10 +4,10 @@
 
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <%= link_to 'Home', root_path, class: 'nav-link active' %>
+    <%= link_to 'Home', root_path, class: "nav-link #{active?(root_path)}" %>
   </li>
   <li class="nav-item">
-    <%= link_to 'Items', posts_path, class: 'nav-link' %>
+    <%= link_to 'Items', posts_path, class: "nav-link #{active?(posts_path)}" %>
   </li>
   <li class="nav-item">
     <a class="nav-link disabled" href="#">Messages</a>
