--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,15 @@
-<h1>Time Entries</h1>
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Date</th>
+      <th scope="col">User</th>
+      <th scope="col">Rationale</th>
+    </tr>
+  </thead>
+  <tbody>
+  <%# @posts.each do |post| %>
+    <%= render @posts %>
+  <%# end %>
+  </tbody>
+</table>
