--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,8 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email %>
+    <%= render 'devise/shared/error_field_message', resource: resource, field: :email %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
@@ -12,13 +13,13 @@
 
   <div class="field">
     <%= f.label :first_name %>
-    <%= render 'devise/shared/error_field', resource: resource, field: :first_name %>
+    <%= render 'devise/shared/error_field_message', resource: resource, field: :first_name %>
     <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
   </div>
 
   <div class="field">
     <%= f.label :last_name %>
-    <%= render 'devise/shared/error_field', resource: resource, field: :last_name %>
+    <%= render 'devise/shared/error_field_message', resource: resource, field: :last_name %>
     <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
   </div>
 
