--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,19 +2,20 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email %>
+    <%= render 'devise/shared/error_field_message', resource: resource, field: :email %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="field">
     <%= f.label :first_name %>
-    <%= render 'devise/shared/error_field', resource: resource, field: :first_name %>
+    <%= render 'devise/shared/error_field_message', resource: resource, field: :first_name %>
     <%= f.text_field :first_name %>
   </div>
 
   <div class="field">
     <%= f.label :last_name %>
-    <%= render 'devise/shared/error_field', resource: resource, field: :last_name %>
+    <%= render 'devise/shared/error_field_message', resource: resource, field: :last_name %>
     <%= f.text_field :last_name %>
   </div>
 
