--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,6 +5,7 @@
       <th scope="col">Date</th>
       <th scope="col">User</th>
       <th scope="col">Rationale</th>
+      <th scope="col">Actions</th>
     </tr>
   </thead>
   <tbody>
