--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -18,7 +18,7 @@
         Account
       </a>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <li><%= link_to 'Edit Details', edit_user_registration_path, class: 'dropdown-item' %></li>
+        <li><%= link_to 'Update', edit_user_registration_path, class: 'dropdown-item' %></li>
         <li><hr class="dropdown-divider"></li>
         <li><%= link_to 'Logout', destroy_user_session_path, class: 'dropdown-item', method: :delete %></li>
       </ul>
