--- a/app/views/static/homepage.html.erb
+++ b/app/views/static/homepage.html.erb
@@ -1,11 +1,3 @@
 <div class="jumbotron">
-  <h2>
-    Homepage
-  </h2>
-  <p>
-    This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.
-  </p>
-  <p>
-    <a class="btn btn-primary btn-large" href="#">Learn more</a>
-  </p>
+  <h2>Homepage</h2>
 </div>
