--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -10,7 +10,7 @@
     <%= link_to 'Items', posts_path, class: "nav-link #{active?(posts_path)}" %>
   </li>
   <li class="nav-item">
-    <a class="nav-link disabled" href="#">Messages</a>
+    <%= link_to 'New Entry', new_post_path, class: "nav-link #{active?(new_post_path)}" %>
   </li>
   <li class="nav-item ms-auto">
     <div class="dropdown">
