--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,10 @@
       <div class="row">
         <div class="col-md-12">
           <%= render 'shared/nav' %>
-          <%= yield %>
+          <div class="jumbotron">
+            <%= render 'shared/flash' %>
+            <%= yield %>
+          </div>
         </div>
       </div>
     </div>
