Update form style

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,23 +1,23 @@
-<%= form_with model: @post, class: 'needs-validation' do |f| %>
-  <div class="mb-3">
+<%= form_with model: @post, class: 'row g-3 needs-validation' do |f| %>
+  <div class="col-md-9">
     <%= f.label :date, class: 'form-label' %>
-    <%= f.date_field :date, class: 'form-control form-control-lg', required: true %>
-    <div class="valid-feedback">
-      Looks good!
-    </div>
-  </div>
-  <div class="mb-3">
-    <%= f.label :rationale, class: 'form-label' %>
-    <%= f.text_area :rationale, class: 'form-control form-control-lg', placeholder: 'Text goes here...', rows: 5, required: true %>
+    <%= f.date_field :date, class: 'form-control form-control-lg' %>
     <div class="invalid-feedback">
-      Please enter rationale
+      Please select a date!
     </div>
   </div>
-  <div class="form-floating mb-3">
+  <div class="col-md-9">
+    <%= f.label :rationale, class: 'form-label' %>
+    <%= f.text_area :rationale, class: 'form-control form-control-lg', placeholder: 'Text goes here...', rows: 5 %>
+    <div class="invalid-feedback">
+      Please enter rationale!
+    </div>
+  </div>
+  <div class="form-floating col-md-9">
     <%= f.text_field :user_id, class: 'form-control', placeholder: 'Input here...', disabled: true %>
     <%= f.label :user_id %>
   </div>
-  <div class="d-grid gap-2">
+  <div class="d-grid gap-2 col-md-9">
     <%= f.submit 'Save', class: 'btn btn-primary btn-block' %>
   </div>
 <% end %>
