--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-md-12">
           <%= render 'shared/nav' %>
-          <div class="jumbotron">
+          <div class="jumbotron m-3">
             <%= render 'shared/flash' %>
             <%= yield %>
           </div>
