--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -15,6 +15,12 @@
       Please enter rationale!
     </div>
   </div>
+  <div class="col-md-9">
+    <% Post.statuses.keys.each do |status| %>
+      <%= f.radio_button :status, status %>
+      <%= f.label :status, status.titleize %>
+    <% end %>
+  </div>
   <div class="form-floating col-md-9">
     <%= f.text_field :user_id, class: 'form-control', placeholder: 'Input here...', disabled: true %>
     <%= f.label :user_id %>
