--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,3 @@
-<div class="logo">
-  <h1>Time Tracker</h1>
-</div>
-
 <ul class="nav nav-tabs">
   <li class="nav-item">
     <%= link_to 'Home', root_path, class: "nav-link #{active?(root_path)}" %>
@@ -18,8 +14,10 @@
         Account
       </a>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        <% if admin? %>
         <li><%= link_to 'Admin Dashboard', admin_root_path, class: 'dropdown-item' %></li>
         <li><hr class="dropdown-divider"></li>
+        <% end %>
         <li><%= link_to 'Logout', destroy_user_session_path, class: 'dropdown-item', method: :delete %></li>
       </ul>
     </div>
