Update settings dropdown

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -11,9 +11,11 @@
   <li class="nav-item ms-auto">
     <div class="dropdown">
       <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-        Account
+        Settings
       </a>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        <li><%= link_to full_name, admin_user_path(current_user), class: 'dropdown-item' %></li>
+        <li><hr class="dropdown-divider"></li>
         <% if admin? %>
         <li><%= link_to 'Admin Dashboard', admin_root_path, class: 'dropdown-item' %></li>
         <li><hr class="dropdown-divider"></li>
