--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,3 +5,10 @@ $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 @import '@fortawesome/fontawesome-free/scss/brands';
 @import 'bootstrap/scss/bootstrap';
 @import 'toastr/toastr';
+
+a.disabled {
+  color: $gray-600;
+  cursor: not-allowed;
+  opacity: 0.5;
+  text-decoration: none;
+}
