--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,7 +5,7 @@
   <td><%= truncate(post.rationale) %></td>
   <td><%= status_span post.status %></td>
   <td>
-    <%= link_to 'Edit', edit_post_path(post), id: "edit_entry_#{post.id}" %>
+    <%= link_to 'Edit', edit_post_path(post), id: "edit_entry_#{post.id}", class: policy(post).update? ? '' : 'disabled' %>
     <%= link_to 'Delete', post_path(post), method: :delete, id: "delete_entry_#{post.id}", data: { confirm: 'Are you sure?' } %>
   </td>
 </tr>
