--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,6 +3,7 @@
   <thead>
     <tr>
       <th scope="col">#</th>
+      <th scope="col">Overtime Request</th>
       <th scope="col">Date</th>
       <th scope="col">User</th>
       <th scope="col">Rationale</th>
