Added audit logs controller and view

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -3,8 +3,13 @@
     <%= link_to 'Home', root_path, class: "nav-link #{active?(root_path)}" %>
   </li>
   <li class="nav-item">
-    <%= link_to 'Items', posts_path, class: "nav-link #{active?(posts_path)}" %>
+    <%= link_to 'Time Entries', posts_path, class: "nav-link #{active?(posts_path)}" %>
   </li>
+  <% if policy(AuditLog).index? %>
+  <li class="nav-item">
+    <%= link_to 'Audit Logs', audit_logs_path, class: "nav-link #{active?(audit_logs_path)}" %>
+  </li>
+  <% end %>
   <li class="nav-item">
     <%= link_to 'New Entry', new_post_path, class: "nav-link #{active?(new_post_path)}" %>
   </li>
