Updated post helper

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h2 class="my-3">List Entries</h2>
+<h2 class="my-3">List of Time Entries</h2>
 <table class="table table-striped table-hover">
   <thead>
     <tr>
@@ -8,6 +8,7 @@
       <th scope="col">User</th>
       <th scope="col">Rationale</th>
       <th scope="col">Actions</th>
+      <th scope="col"></th>
     </tr>
   </thead>
   <tbody>
