Paginate audit logs

--- a/app/views/audit_logs/index.html.erb
+++ b/app/views/audit_logs/index.html.erb
@@ -10,7 +10,11 @@
       <th scope="col"></th>
     </tr>
   </thead>
-  <tbody>
+  <tbody id="audit_logs">
     <%= render @audit_logs %>
   </tbody>
 </table>
+
+<div id="paginator">
+  <%= paginate @audit_logs, remote: true %>
+</div>
