--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h2 class="my-3">List of Time Entries</h2>
+<h2 class="my-3">Overtime Requests</h2>
 <table class="table table-striped table-hover">
   <thead>
     <tr>
