Update dashboard styles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,10 +6,13 @@ $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 @import 'bootstrap/scss/bootstrap';
 @import 'toastr/toastr';
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
+@import 'dashboard';
 
-a.disabled {
-  color: $gray-600;
-  cursor: not-allowed;
-  opacity: 0.5;
-  text-decoration: none;
+a {
+  &.disabled {
+    color: $gray-600;
+    cursor: not-allowed;
+    opacity: 0.5;
+    text-decoration: none;
+  }
 }
