--- a/app/views/static/_admin.html.erb
+++ b/app/views/static/_admin.html.erb
@@ -1,24 +1,27 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col">
-      <h2>Pending Overtime Requests</h2>
+      <h2>Items Pending for Your Approval</h2>
     </div>
   </div>
   <div class="row">
     <%= render partial: 'request', locals: { pending_requests: @overtime_requests } %>
   </div>
-  <% if @audit_logs&.any? %>
+</div>
+<% if @recent_audit_items&.any? %>
+  <div class="container-fluid bg bg-secondary">
     <div class="row">
       <div class="col">
         <h2>Pending Submissions</h2>
       </div>
     </div>
     <div class="row">
-      <% @audit_logs.each do |log| %>
-        <div class="col-sm-4 bg bg-primary my-3 p-3">
-          <%= log.inspect %>
-        </div>
-      <% end %>
+      <div class="col">
+        <%= link_to 'View All Items', audit_logs_path, class: 'btn btn-primary' %>
+      </div>
     </div>
-  <% end %>
-</div>
+    <div class="row">
+      <%= render partial: 'confirmation_log', locals: { recent_audit_items: @recent_audit_items } %>
+    </div>
+  </div>
+<% end %>
