--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -11,7 +11,7 @@
   </li>
   <% end %>
   <li class="nav-item">
-    <%= link_to 'New Entry', new_post_path, class: "nav-link #{active?(new_post_path)}" %>
+    <%= link_to 'Overtime Requests', new_post_path, class: "nav-link #{active?(new_post_path)}" %>
   </li>
   <li class="nav-item ms-auto">
     <div class="dropdown">
