--- a/app/views/static/_employee.html.erb
+++ b/app/views/static/_employee.html.erb
@@ -1,10 +1,25 @@
-<div class="container-fluid">
+<% if @pending_audit_confirmations.present? %>
+  <div class="container-fluid bg bg-light p-3">
+    <div class="row">
+      <div class="col-sm-12">
+        <h2>Pending Your Confirmation</h2>
+      </div>
+    </div>
+    <div class="row align-items-center">
+      <%= render partial: 'pending_audit_confirmation', locals: { pending_audit_confirmations: @pending_audit_confirmations } %>
+    </div>
+  </div>
+<% end %>
+
+<div class="container-fluid bg bg-light p-3">
   <div class="row">
     <div class="col-sm-12">
-      <h2>Pending Your Confirmation</h2>
+      <h2>Request Overtime</h2>
     </div>
   </div>
   <div class="row align-items-center">
-    <%= render partial: 'pending_audit_confirmation', locals: { pending_audit_confirmations: @pending_audit_confirmations } %>
+    <div class="col-sm-12">
+      <%= link_to 'Request Overtime Approval', new_post_path, class:'btn btn-primary' %>
+    </div>
   </div>
 </div>
